--- a/sections/ReferenceBook.tex
+++ b/sections/ReferenceBook.tex
@@ -1,4 +1,5 @@
-\addcontentsline{toc}{section}{参考文献}
+\phantomsection
+\addcontentsline{toc}{chapter}{参考文献}
 \begin{thebibliography}{99}
     \bibitem{讲义}
     清华大学统计学研究中心 辅修课程课件与讲义. W. Deng, J. Wang, Z. Zhou, D. Li, T. Wang, S. Yu, P. Yang.
@@ -56,6 +57,14 @@
     Random Processes for Engineers. Bruce Hajek. Cambridge University Press
     \bibitem{随机过程ref2}
     应用随机过程. 林元烈. 清华大学出版社.
+    \bibitem{贝叶斯ref1}
+    Bayesian Data Analysis (3rd Edition). Andrew Gelman, John B. Carlin, Hal S. Stern etc. Chapman and Hall CRC Press.
+    \bibitem{实验设计ref1}
+    Design and Analysis of Experiments. Douglas C. Montgomery. Wiley.
+    \bibitem{实验设计ref2}
+    Design and Analysis of Experiments with R. J.Lawson. Chapman and Hall CRC Press
+    \bibitem{实验设计ref3}
+    Planning of Experiments. D.R. Cox. Wiley.
 
 
 \end{thebibliography}
